Implementing TextRazor API
In the middle of implementing the TextRazor Keyword Extractor API.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="title_language">LanguageActivity</string>
     <string name="title_get_started">GetStartedActivity</string>
     <string name="title_activity_search">SearchActivity</string>
-    <string name="search_hint">Search for controversial topics or people</string>
+    <string name="search_hint">Search for topics or people</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <string name="google_key">AIzaSyDc63dNSdT88mrDRO4lYr8lQA3WeA7FxhA</string>
+    <string name="text_razor_key">c6cb312b88076c6ccbdf122ee33b43281ed985497f72d6debfe76283</string>
 </resources>
