Icon and comments added
Icon has been changed to NewsBear and all java code is commented. Additionally, setting UI has changed slightly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NewsBear2</string>
+    <string name="app_name">NewsBear</string>
     <string name="title_activity_home">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_welcome">WelcomeActivity</string>
